===============================================================================
Version 3.1
===============================================================================
Patchlevel 3 (XXX XX, XXXX)

NEW FEATURES

o only need to change XPM defines in fig2dev/Imakefile
o if your system has the strerror() function (doesn't have sys_errlist) then
	comment out NEED_STRERROR with an XCOMM comment.
o new option for PostScript output, "-e" to force figure to edge (flush-left).
	Useful when the figure was saved with Centering on.
o point objects (POLYLINE with only one point) have thickness now and will be
	filled circles if cap style is rounded.  PostScript output only.
o -A option to scale arrowhead sizes for epic driver
o can rotate all text (not just left justified) in LaTeX now using \rotatebox.
	The old restriction is not needed because the epsfig package is
	required to include ps_tex_t files anyway.
o new line types - Dash-dot (_.) Dash-dot-dot (_..) and Dash-dot-dot-dot (_...)

BUGS FIXED

o double colon (::) needed for .man installation in Imakefiles
o linewidth wasn't working correctly in epic/eepic driver
	from Andre Eickler (eickler@db.fmi.uni-passau.de)
o some versions of imake don't like null parameters in SpecialObjectRule in
	Imakefile - changed to "NullParameter"
o the text alignment problem in LaTeX output has been fixed (genlatex.c)
	From Francky Leyn (Francky.Leyn@esat.kuleuven.ac.be)
o if the endpoints of a POLYLINE are coincident, the line join parameter will
	be used to join them (xfig already showed this behavior)
o redefined $(XPMINCDIR) to $(XPMINC) because some compilers have trouble with
	header search path with empty "-I"
o incorrect directory specified for xpm.h in fig2dev/dev/genps.c and readxpm.c
o changed "ln -s" commands in Imakefiles to "-ln -s" so make will continue if
	symlinks are already in place
o back arrows incorrect for splines and lines in epic driver
o figure was clipped to pagesize even in EPS mode