@@ -1,4 +1,4 @@
-.TH FIG2DEV 1 "Release 3.1(.2) (Protocol 3.1) Aug 16, 1995"
+.TH FIG2DEV 1 "Release 3.1(.2a) (Protocol 3.1) Jun 4, 1996"
 .SH NAME
 fig2dev \- translates Fig code to various graphics languages
 
